// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createStyle works with function 1`] = `
<DocumentFragment>
  .css-114av29 {
  color: #3B5998;
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  line-height: normal;
  color: blue;
}

<div
    class="css-114av29"
  />
</DocumentFragment>
`;

exports[`createStyle works with simple object 1`] = `
<DocumentFragment>
  .css-144sxof {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  line-height: normal;
  color: blue;
}

<div
    class="css-144sxof"
  />
</DocumentFragment>
`;

exports[`createStyle works with simple string 1`] = `
<DocumentFragment>
  .css-hkdax8 {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  line-height: normal;
  color: blue;
}

<div
    class="css-hkdax8"
  />
</DocumentFragment>
`;

exports[`createStyle works with simple style 1`] = `
<DocumentFragment>
  .css-1s1nckb {
  font-family: "Palanquin","Helvetica",sans-serif;
  font-size: 16px;
  line-height: normal;
  color: blue;
}

<div
    class="css-1s1nckb"
  />
</DocumentFragment>
`;
